# finalProj2610

./: README.md  pyproject.toml
_server/: .gitignore
_server/_server/: urls.py
_server/core/: models.py  urls.py  views.py
_server/core/utils/: jarvis.py  natalie.py  recording.py  test.py
_server/registration/templates/registration/: base.html  sign_in.html
client/src/: Layout.jsx  main.jsx
client/src/pages/: Home.jsx  Jarvis.jsx  Natalie.jsx
client/src/style/: index.css  layout.css
